@@ -1,6 +1,6 @@
 SNMP TRAP TRANSLATOR (SNMPTT)
 
-Copyright 2002,2003 Alex Burger 
+Copyright 2002-2005 Alex Burger 
 alex_b@users.sourceforge.net
 4/11/2002
 
