@@ -1,3 +1,6 @@
+April 15th, 2005: Alex Burger <alex_b@users.sourceforge.net>
+- Added Windows Event Log forwarding documentation to integration section
+
 April 11th, 2005: Alex Burger <alex_b@users.sourceforge.net>
 - Fix bug in snmpttconvertmib:  --ARGUMENTS {} line was expected to have
   one space between ARGUMENTS and {}.  It can now be any amount of white
